Remove not needed method from Repository.kt interface, move sensitive variables to use enviroment variables